--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Labirintas 02</title>
+    <title>Maze 02</title>
 </head>
 <body>
-    <main>
-        <img src="#labirintas" alt="Labirintas">
-        <div>
-            <h1>404</h1>
+    <main style="background-color: blue; width:70%; margin-left:15%; margin-top: 70px; display: inline-block;">
+        <img src="./img/maze-img.png" alt="Maze" style="float: left; width: 25%;">
+        <div style="background-color: yellow; float: left; width: 75%; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
+            <h1 style="font-size: 140px; margin-top: 25px; color:#1F4D14;">404</h1>
             <p>Looks like you are in a maze</p>
             <p>Use the keyboard to control the ball to maze exit to return to the home, or</p>
             <a href="#home">Go back Home</a>
