style: add fonts and box with link

--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <title>Maze 02</title>
 </head>
 <body>
-    <main style="background-color: blue; width:70%; margin-left:15%; margin-top: 70px; display: inline-block;">
-        <img src="./img/maze-img.png" alt="Maze" style="float: left; width: 25%;">
-        <div style="background-color: yellow; float: left; width: 75%; font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
-            <h1 style="font-size: 140px; margin-top: 25px; color:#1F4D14;">404</h1>
-            <p>Looks like you are in a maze</p>
-            <p>Use the keyboard to control the ball to maze exit to return to the home, or</p>
-            <a href="#home">Go back Home</a>
+    <main style="width:60%; margin-left:20%; margin-top: 120px; display: inline-block;">
+        <img src="./img/maze-img.png" alt="Maze" style="float: left; width: 30%;">
+        <div style="float: left; width: 60%; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; margin-left: 10%;">
+            <h1 style="font-size: 120px; margin: 0; margin-top: 15px; color:#1F4D14;">404</h1>
+            <p style="color: #225017; font-weight: 700; font-size: 20px; margin: 0; margin-top: 10px;">Looks like you are in a maze.</p>
+                <p style="color: #969696; font-weight: 600; margin-top: 20px; width: 50%; line-height: 20px;">Use the keyboard to control the ball to maze exit to return to the home, or</p>
+            <div style="background-color: #61AE4F; display: inline-block; padding: 8px 18px 8px 18px ; box-shadow:1px 2px 10px #61AE4F;">
+                <a href="#home" style="color: white; font-size: 14px; text-decoration: none;">Go back Home</a>
+            </div>
+
         </div>
     </main>
 </body>
