--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Maze 02</title>
 </head>
 <body>
-    <main style="width:60%; margin-left:20%; margin-top: 120px; display: inline-block;">
+    <header style="width: 70%; margin-left: 10%;">
+        <p style="color: rgb(187, 182, 182); font-weight:300; font-family: Arial, sas-serif; font-size: 35px; text-align: right;">x</p>
+    </header>
+    <main style="width:60%; margin-left:20%; margin-top: 80px; display: inline-block;">
         <img src="./img/maze-img.png" alt="Maze" style="float: left; width: 30%;">
         <div style="float: left; width: 60%; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; margin-left: 10%;">
             <h1 style="font-size: 120px; margin: 0; margin-top: 15px; color:#1F4D14;">404</h1>
