add separate css file

--- a/index.html
+++ b/index.html
@@ -5,21 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Maze 02</title>
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    <header style="width: 70%; margin-left: 10%;">
-        <p style="color: rgb(187, 182, 182); font-weight:300; font-family: Arial, sas-serif; font-size: 35px; text-align: right;">x</p>
+    <header class="main-header">
+        <p class="x-symbol">x</p>
     </header>
-    <main style="width:60%; margin-left:20%; margin-top: 80px; display: inline-block;">
-        <img src="./img/maze-img.png" alt="Maze" style="float: left; width: 30%;">
-        <div style="float: left; width: 60%; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif; margin-left: 10%;">
-            <h1 style="font-size: 120px; margin: 0; margin-top: 15px; color:#1F4D14;">404</h1>
-            <p style="color: #225017; font-weight: 700; font-size: 20px; margin: 0; margin-top: 10px;">Looks like you are in a maze.</p>
-                <p style="color: #969696; font-weight: 600; margin-top: 20px; width: 50%; line-height: 20px;">Use the keyboard to control the ball to maze exit to return to the home, or</p>
-            <div style="background-color: #61AE4F; display: inline-block; padding: 8px 18px 8px 18px ; box-shadow:1px 2px 10px #61AE4F;">
-                <a href="#home" style="color: white; font-size: 14px; text-decoration: none;">Go back Home</a>
-            </div>
-
+    <main class="main-content">
+        <img class="right-col" src="./img/img.png" alt="Maze">
+        <div class="left-col" style="">
+            <h1 class="main-heading">404</h1>
+            <p class="sub-heading">Looks like you are in a maze.</p>
+                <p class="description">Use the keyboard to control the ball to maze exit to return to the home, or</p>
+            <a class="btn" href="#home">Go back Home</a>
         </div>
     </main>
 </body>
