del unnecessary tag

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <main class="main-content">
         <img class="right-col" src="./img/img.png" alt="Maze">
-        <div class="left-col" style="">
+        <div class="left-col">
             <h1 class="main-heading">404</h1>
             <p class="sub-heading">Looks like you are in a maze.</p>
                 <p class="description">Use the keyboard to control the ball to maze exit to return to the home, or</p>
